# TradeHistoryAnalyzer

./: .env.example  .gitignore  README.md  vercel.json
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260711_0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  router.py  schemas.py
backend/app/ai/providers/: __init__.py  gemini_client.py  groq_client.py
backend/app/api/: __init__.py  deps.py  router.py
backend/app/api/routes/: health.py  integrations.py  reports.py  uploads.py
backend/app/core/: config.py  key_status.py
backend/app/db/: base.py  session.py
backend/app/market_data/: __init__.py  alpha_vantage.py  fmp.py  router.py  types.py
backend/app/models/: __init__.py  entities.py
backend/app/parsers/: __init__.py  column_mapping.py  common.py  pdf.py  portfolio.py  transactions.py
backend/app/reports/: __init__.py  generator.py  metrics.py  theme_rules.py
backend/app/schemas/: domain.py  health.py  integrations.py  reports.py  uploads.py
backend/app/services/: __init__.py  reports.py  uploads.py
backend/app/storage/: __init__.py  base.py  local.py  r2.py  router.py
backend/tests/: conftest.py  test_ai_schemas.py  test_config_and_status.py  test_parsers.py  test_reports.py
backend/tests/fixtures/: sample_portfolio.csv  sample_transactions.csv
frontend/: package.json  tailwind.config.js
scripts/: Check-Frontend.ps1  Get-IntegrationStatus.ps1  Migrate-Database.ps1  Start-Backend.ps1  Start-Frontend.ps1  Test-Backend.ps1  _common.ps1
(+22 files in other folders)
