[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "tradehistoryanalyzer-backend"
version = "0.1.0"
description = "FastAPI backend for TradeHistoryAnalyzer"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16.4",
  "boto3>=1.39.4",
  "fastapi>=0.116.0",
  "httpx>=0.28.1",
  "pandas>=2.3.1",
  "openpyxl>=3.1.5",
  "pdfplumber>=0.11.7",
  "polars>=1.31.0",
  "psycopg[binary]>=3.2.9",
  "pydantic-settings>=2.10.1",
  "python-dateutil>=2.9.0.post0",
  "python-multipart>=0.0.20",
  "sqlalchemy>=2.0.41",
  "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "pytest-cov>=6.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
